--- a/Neo/Neo.csproj
+++ b/Neo/Neo.csproj
@@ -220,6 +220,12 @@
     <Compile Include="FrmPrm.Designer.cs">
       <DependentUpon>FrmPrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmTscFactura.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmTscFactura.Designer.cs">
+      <DependentUpon>FrmTscFactura.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmTscOrdenPedido.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -309,6 +315,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPrm.resx">
       <DependentUpon>FrmPrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmTscFactura.resx">
+      <DependentUpon>FrmTscFactura.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmTscOrdenPedido.resx">
       <DependentUpon>FrmTscOrdenPedido.cs</DependentUpon>
