--- a/Neo/Neo.csproj
+++ b/Neo/Neo.csproj
@@ -33,12 +33,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ComponentFactory.Krypton.Toolkit, Version=4.5.0.0, Culture=neutral, PublicKeyToken=a87e673e9ecb6e8e, processorArchitecture=MSIL">
+    <Reference Include="ComponentFactory.Krypton.Design, Version=4.5.0.0, Culture=neutral, PublicKeyToken=a87e673e9ecb6e8e, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\ComponentFactory.Krypton.Toolkit.dll</HintPath>
+      <HintPath>..\..\..\Neo\bin\Debug\ComponentFactory.Krypton.Design.dll</HintPath>
+    </Reference>
+    <Reference Include="ComponentFactory.Krypton.Navigator">
+      <HintPath>..\..\..\..\..\Downloads\Krypton-master\Bin\ComponentFactory.Krypton.Navigator.dll</HintPath>
+    </Reference>
+    <Reference Include="ComponentFactory.Krypton.Toolkit, Version=4.6.0.0, Culture=neutral, PublicKeyToken=a87e673e9ecb6e8e, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Downloads\Krypton-master\Bin\ComponentFactory.Krypton.Toolkit.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -153,6 +161,12 @@
     </Compile>
     <Compile Include="FrmMtoIdentificacion.Designer.cs">
       <DependentUpon>FrmMtoIdentificacion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmMtoMascota.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmMtoMascota.Designer.cs">
+      <DependentUpon>FrmMtoMascota.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmMtoMoneda.cs">
       <SubType>Form</SubType>
@@ -330,6 +344,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMtoIdentificacion.resx">
       <DependentUpon>FrmMtoIdentificacion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmMtoMascota.resx">
+      <DependentUpon>FrmMtoMascota.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMtoMoneda.resx">
       <DependentUpon>FrmMtoMoneda.cs</DependentUpon>
