--- a/Neo/Neo.csproj
+++ b/Neo/Neo.csproj
@@ -294,6 +294,12 @@
     <Compile Include="FrmPrm.Designer.cs">
       <DependentUpon>FrmPrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmRptCita.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmRptCita.Designer.cs">
+      <DependentUpon>FrmRptCita.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmTscCita.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -428,6 +434,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPrm.resx">
       <DependentUpon>FrmPrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmRptCita.resx">
+      <DependentUpon>FrmRptCita.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmTscCita.resx">
       <DependentUpon>FrmTscCita.cs</DependentUpon>
