--- a/Neo/App.config
+++ b/Neo/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Neo.Properties.Settings.csNeo" connectionString="Data Source=groovestudio.database.windows.net;Initial Catalog=NeoDesarrollo;User ID=administrador;Password=Emmanuel2612%"
+        <add name="Neo.Properties.Settings.csNeo" connectionString="Data Source=groovestudio.database.windows.net;Initial Catalog=Neo;User ID=administrador;Password=Emmanuel2612%"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
