--- a/Neo/Neo.csproj
+++ b/Neo/Neo.csproj
@@ -337,6 +337,12 @@
     <Compile Include="FrmRptCitaPendiente.Designer.cs">
       <DependentUpon>FrmRptCitaPendiente.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmRptFctGnr.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmRptFctGnr.Designer.cs">
+      <DependentUpon>FrmRptFctGnr.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmRptHistorial.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -381,6 +387,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmBscFactura.resx">
       <DependentUpon>FrmBscFactura.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmBscHistorial.resx">
       <DependentUpon>FrmBscHistorial.cs</DependentUpon>
@@ -498,6 +505,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPrm.resx">
       <DependentUpon>FrmPrm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRpt.resx">
       <DependentUpon>FrmRpt.cs</DependentUpon>
@@ -507,6 +515,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRptCitaPendiente.resx">
       <DependentUpon>FrmRptCitaPendiente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmRptFctGnr.resx">
+      <DependentUpon>FrmRptFctGnr.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRptHistorial.resx">
       <DependentUpon>FrmRptHistorial.cs</DependentUpon>
