--- a/Neo/Neo.csproj
+++ b/Neo/Neo.csproj
@@ -379,6 +379,12 @@
     <Compile Include="FrmTscOrdenPedido.Designer.cs">
       <DependentUpon>FrmTscOrdenPedido.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmTscReciboIngreso.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmTscReciboIngreso.Designer.cs">
+      <DependentUpon>FrmTscReciboIngreso.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RptTscCita.cs">
@@ -546,6 +552,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmTscOrdenPedido.resx">
       <DependentUpon>FrmTscOrdenPedido.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmTscReciboIngreso.resx">
+      <DependentUpon>FrmTscReciboIngreso.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
